--- a/citations.bib
+++ b/citations.bib
@@ -25,3 +25,13 @@
 	keywords = {some keyword, another keyword},
 	pages = {2200--2300},
 }
+
+@misc{mahajan2025codegenerationconicconstraints,
+      title={Code Generation and Conic Constraints for Model-Predictive Control on Microcontrollers with Conic-TinyMPC}, 
+	author={Ishaan Mahajan and Khai Nguyen and Sam Schoedel and Elakhya Nedumaran and {\textbf{Moises Mata}} and Brian Plancher and Zachary Manchester},
+      year={2025},
+      eprint={2403.18149},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2403.18149}, 
+}
