--- a/cv.tex
+++ b/cv.tex
@@ -170,7 +170,7 @@ Undergraduate student at Columbia University studying Computer Science and Appli
 \begin{joblong}{Research Assistant, Columbia CGUI Lab}{Aug 2024 -- Present}
 \item Undergrad lab assistant working on VISER (Visualizing Ice Sheets in Extended Reality), a collaborative VR framework to help climate scientists visualize ice sheet data.
 \item Implementing scientific collaboration in VR using Unity Photon and developing a long-term testing framework to study binary behavior under continuous multi-day runtime.
-\item Tools Used: Unity Game Engine, Photon Unity Networking, C#
+\item Tools Used: Unity Game Engine, Photon Unity Networking, C\#
 \end{joblong}
 
 \begin{joblong}{Grading Teaching Assistant, Columbia Physics Department -- New York, NY}{Sept 2024 -- Dec 2024}
@@ -218,8 +218,8 @@ Undergraduate student at Columbia University studying Computer Science and Appli
 \begin{joblong}{NASA SUITS Mission Co-Lead, Columbia Space Initiative -- New York, NY}{Sept 2023 -- Jul 2024}
 \item Mission Lead for CSI's SUITS Team. Helped develop an AR user interface for astronaut assistance.
 \item Co-authored a proposal that became one of 17 national finalists and led development/test activities at NASA Johnson Space Center.
-\item Led triweekly meetings, taught Unity and C# to team members, and oversaw proposal and application development.
-\item Tools Used: Unity, C#
+\item Led triweekly meetings, taught Unity and C\# to team members, and oversaw proposal and application development.
+\item Tools Used: Unity, C\#
 \end{joblong}
 
 %----------------------------------------------------------------------------------------
