--- a/citations.bib
+++ b/citations.bib
@@ -5,5 +5,6 @@
       eprint={2403.18149},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      url={https://arxiv.org/abs/2403.18149}, 
+      url={https://arxiv.org/abs/2403.18149},
+      note={IEEE Robotics \& Automation Society (In review)},
 }
