--- a/cv.tex
+++ b/cv.tex
@@ -179,7 +179,7 @@
 \end{joblong}
 
 \begin{joblong}{Columbia SNL Lab}{New York, NY}{Undergraduate Researcher}{Sept 2025 -- Present}
-\item Part of team working on a lightweight, high-assurance runtime for spacecraft flight software built on eBPF, enabling dynamic yet predictable execution of mission and payload logic under strict safety constraints.
+\item Part of team working on a lightweight, high-assurance runtime for spacecraft flight software built on eBPF, enabling dynamic yet predictable execution of mission and payload logic under strict safety constraints. Advising professor: Junfeng Yang. 
 \item Responsible for using F Prime, eBPF, and C/C++ to meet realtime requirements by multithreading Duotronic VMs and implementing a miniature scheduler for real-time scheduling to satisfy millisecond rate-group deadlines with bounded execution time. (\textbf{Publication coming soon})
 \end{joblong}
 
